# MailServer

./: CMakeLists.txt  Makefile  README.md  definitions.h
client/: client_main.cpp
doc/: mailserver_protokoll.docx
server/: client_handler.cpp  client_handler.h  operation.cpp  operation.h  server.cpp  server.h  server_main.cpp  socket_read.cpp  socket_read.h
server/operations/: operation_del.cpp  operation_del.h  operation_list.cpp  operation_list.h  operation_login.cpp  operation_login.h  operation_read.cpp  operation_read.h  operation_send.cpp  operation_send.h
